# TridentDP

./: CMakeLists.txt  READEME.md  README.md
Emulator/: CMakeLists.txt  Emulator.cpp  README.md
Emulator/data/: waveform_template.yaml
Emulator/include/: WaveformSimulator.hh
Emulator/src/: WaveformSimulator.cc
data/: atmos_muon_example.root
include/: constant.hh  trident_ds.hh
include/data_structure/: Event.hh  trident_ds-generated.hh  trident_ds.hh
include/transformer/: GroupRootTrans.hh  RawGroupTrans.hh
src/: CMakeLists.txt  group_to_root.cc  raw_reader.cc  raw_to_group.cc
src/data_structure/: Event.cc
src/transformer/: GroupRootTrans.cc  RawGroupTrans.cc
utils/: trident_ds.bsi
